# linkedin-agent-ops

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-brief.yml
config/: creator_profile.toml  settings.toml
src/linkedin_agent_ops/: __init__.py  agent_models.py  agent_runner.py  api.py  config.py  context.py  daily_brief.py  email_delivery.py  formatter.py  llm.py  models.py  pipeline.py  prompting.py  protocols.py  ranking.py  services.py  sheets.py  ui.py  utils.py
src/linkedin_agent_ops/agents/: __init__.py  base.py  carousel.py  cricket.py  paper.py  performance.py  post_architecture.py
src/linkedin_agent_ops/collectors/: __init__.py  arxiv.py  github.py  hackernews.py  rss.py
tests/: test_agent_runner.py  test_api.py  test_carousel.py  test_collectors.py  test_config.py  test_cricket.py  test_daily_brief.py  test_email_delivery.py  test_formatter.py  test_llm.py  test_paper.py  test_paper_input.py  test_performance.py  test_pipeline.py  test_post_architecture.py  test_prompting.py  test_ranking.py  test_sheets.py  test_ui.py  test_utils.py
tests/fixtures/: source_items.json
